--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "bootstrap": "^5.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-horizontal-scrolling-menu": "^2.0.6",
+    "react-elastic-carousel": "^0.11.5",
+    "styled-components": "^5.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
