--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "styled-components": "^5.3.0",
+    "tailwind-scrollbar-hide": "^1.0.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
