--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.3.4",
     "react-elastic-carousel": "^0.11.5",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
