--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 
 # dependencies
 /node_modules
-/docAppUI/node_modules
-/docAppAPI/node_modules
+/ui/node_modules
+/api/node_modules
 /.pnp
 .pnp.js
 
