API template added

--- a/api/specs/api.yml
+++ b/api/specs/api.yml
@@ -327,6 +327,9 @@ paths:
               type: object
               allOf:
                 - $ref: "#/components/schemas/UserDetails"
+              properties:
+                password:
+                  type: string
 
       responses:
         201:
