--- a/ui/package.json
+++ b/ui/package.json
@@ -12,7 +12,12 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.23.0",
+    "babel-jest": "^26.6.3",
     "bootstrap": "^5.0.2",
+    "enzyme": "^3.11.0",
+    "jest": "^26.6.0",
+    "jest-cli": "^27.2.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
