--- a/api/.env
+++ b/api/.env
@@ -1,2 +1,2 @@
-JWT_SECRET=YOUR_SECRET_KEY
-MONGODB_CONNECTION_STRING="mongodb+srv://user_name:password@DB_host/DB_name"
+JWT_SECRET=$6DocQ#$GRil24T4LIon344$#$@#%%$6DocQ
+MONGODB_CONNECTION_STRING="mongodb+srv://docq_app:document@cluster0.c8m58.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
