--- a/ui/package.json
+++ b/ui/package.json
@@ -21,9 +21,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
+    "react-modal": "^3.14.3",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.1.0",
     "redux": "^4.1.1",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
