--- a/api/.env
+++ b/api/.env
@@ -1,2 +1,2 @@
 JWT_SECRET=$6DocQ#$GRil24T4LIon344$#$@#%%$6DocQ
-MONGODB_CONNECTION_STRING="mongodb+srv://docq_app:document@cluster0.c8m58.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
+MONGODB_CONNECTION_STRING="mongodb+srv://docq_app:document@cluster0.c8m58.mongodb.net/docq_app_dev?retryWrites=true&w=majority"
